# bazel-registry

modules/libDDD/: metadata.json
modules/libDDD/1.9.0/: MODULE.bazel  source.json
modules/libDDD/1.9.0/patches/: BUILD.bazel.patch  MODULE.bazel.patch
modules/libDDD/20221018.0/: MODULE.bazel  source.json
modules/libDDD/20221018.0/patches/: MODULE.bazel.patch  build_bazel.patch  module_bazel.patch
modules/libDDD/overlay/: BUILD.bazel  MODULE.bazel
modules/mdd-glu/: metadata.json
modules/mdd-glu/2.4.0/: source.json
modules/rules_peg/: metadata.json
modules/rules_peg/0.1.18/: MODULE.bazel  source.json
modules/rules_peg/0.1.18/patches/: BUILD.bazel.patch  MODULE.bazel.patch  peg_BUILD.bazel.patch  peg_defs.bzl.patch
modules/rules_peg/overlay/: BUILD.bazel  MODULE.bazel
modules/rules_peg/overlay/peg/: defs.bzl
